Update property source path in UserServiceTest and simplify header list creation in UserServiceOAuthWsIT